# slicer-rosa-helper

./: .gitignore  ATLAS_SOURCE_CONTRACT.md  CITATION.cff  CMakeLists.txt  INSTALL.md  LICENSE  PROGRESS.md  PUBLISH.md  README.md  REFRACTOR_CHECKLIST.md  ROADMAP.md  environment.yml  pyproject.toml
AtlasLabeling/: AtlasLabeling.py  CMakeLists.txt
AtlasSources/: AtlasSources.py  CMakeLists.txt
CommonLib/resources/electrodes/: electrode_models.json
CommonLib/rosa_core/: __init__.py  assignments.py  atlas_assignment_policy.py  atlas_index.py  case_loader.py  contact_fit.py  contact_peak_fit.py  contacts.py  curry_export.py  electrode_classifier.py  electrode_models.py  exporters.py  qc.py  registration.py  ros_parser.py  transforms.py  types.py  volume_sampling.py
CommonLib/rosa_detect/: __init__.py  bolt_anchor.py  contact_pitch_v1_fit.py  contracts.py  diagnostics.py  guided_fit_engine.py  service.py
CommonLib/rosa_detect/primitives/: __init__.py  (+1 more)
CommonLib/rosa_scene/: __init__.py  atlas_assignment_service.py  atlas_core_service.py  atlas_provider_registry.py  atlas_provider_types.py  atlas_providers.py  atlas_registration_service.py  atlas_utils.py  case_loader_service.py  dicom_io_service.py  electrode_scene.py  freesurfer_service.py  layout_service.py  loader_core_bridge.py  registration_service.py  scene_utils.py  sitk_volume_adapter.py  thomas_service.py  trajectory_focus_controller.py  trajectory_scene.py
CommonLib/rosa_workflow/: __init__.py  export_bundle.py  export_profiles.py  workflow_publish.py  workflow_registry.py  workflow_resolve.py  workflow_state.py
CommonLib/shank_core/: __init__.py  blob_candidates.py  detect.py  masking.py  pipeline.py
CommonLib/shank_engine/: README.md  __init__.py  artifacts.py  bootstrap.py  contracts.py  diagnostics.py  interfaces.py  lineage_tracking.py  registry.py
ContactImport/: CMakeLists.txt  ContactImport.py
ContactsTrajectoryView/: CMakeLists.txt  ContactsTrajectoryView.py
ExportCenter/: CMakeLists.txt  ExportCenter.py
NavigationBurn/: CMakeLists.txt  NavigationBurn.py
PostopCTLocalization/: CMakeLists.txt  PostopCTLocalization.py
PostopCTLocalization/postop_ct_localization/: constants.py  contact_pitch_v1_fit.py  de_novo.py  deep_core_annulus.py  deep_core_atoms.py  deep_core_axis_reconstruction.py  deep_core_bolt_ransac.py  deep_core_candidate_dedup.py  deep_core_candidate_generation.py  deep_core_candidate_inputs.py  deep_core_complex_blob.py  deep_core_config.py  deep_core_contact_chain.py  deep_core_debug.py  deep_core_model_fit.py  deep_core_pipeline.py  deep_core_proposal_annulus.py  deep_core_proposal_finalize.py  deep_core_proposals.py  deep_core_stages.py  deep_core_support.py  deep_core_v2_fit.py  deep_core_visualization.py  deep_core_volume.py  deep_core_widget.py  gui.py  guided_fit.py  guided_fit_engine.py  logic_common.py  manual_fit.py
RosaHelper/: CMakeLists.txt  RosaHelper.py
RosaHelper/Lib/rosa_core/: __init__.py  assignments.py  case_loader.py  contact_fit.py  contacts.py  electrode_models.py  exporters.py  qc.py  ros_parser.py  transforms.py
RosaHelper/Lib/rosa_slicer/: __init__.py  electrode_scene.py  freesurfer_service.py  trajectory_scene.py  widget_mixin.py
RosaHelper/Lib/rosa_slicer/workflow/: __init__.py  export_bundle.py  export_profiles.py  workflow_publish.py  workflow_registry.py  workflow_resolve.py  workflow_state.py
ShankDetect/: CMakeLists.txt  ShankDetect.py
ShankDetect/Lib/: __init__.py
ShankDetect/Lib/shank_core/: __init__.py  io.py  masking.py  pipeline.py
cli/: README.md
cli/rosa_agent/: __init__.py  __main__.py  main.py
docs/: CONTACT_PITCH_V1_HANDOFF.md  DEEP_CORE_V2_HANDOFF.md  DEVELOPER_GUIDE.md  HANDOFF.md  NEXT_SESSION_PROMPT.md  PHASE_B_REDESIGN.md  PHASE_B_STATUS.md  USER_GUIDE.md
tests/: __init__.py
tests/deep_core/: __init__.py  make_bolt_mask.py  probe_amc099.py  probe_ax_tol_sweep.py  probe_axis_surroundings.py  probe_blob_pitch.py  probe_bolt_axis_profile.py  probe_bolt_recovery.py  probe_bolt_tier_usage.py  probe_cc_labeling.py  probe_contact_peak_engine.py  probe_contact_peak_filters.py  probe_contact_recovery.py  probe_cylinder_fit.py  probe_dataset_full_baseline.py  probe_dataset_pitch_fft.py  probe_dataset_recall.py  probe_dataset_rotation_invariance.py  probe_dataset_scale_space.py  probe_deep_tip_gate_effect.py  probe_detector_v3.py  probe_detector_v4.py  probe_detector_v5_log.py  probe_diagnose.py  probe_frangi.py  probe_frangi_cc.py  probe_gm_bolt_entry.py  probe_gm_entry_points.py  probe_inlier_amp_distribution.py  probe_inlier_hu.py  probe_log_frangi.py  probe_log_histogram.py  probe_log_oracle.py  probe_log_threshold_sweep.py  probe_metal_continuity.py  probe_metal_evidence_calibration.py  probe_orphan_gate_margins.py  probe_pacer_picker_oor.py  probe_pacer_picker_robustness.py  probe_pacer_picker_t22.py  (+40 more)
tests/rosa_agent/: test_atlas_registration.py  test_pipeline_frames.py  test_trajectory_io.py
tests/rosa_core/: test_assignments.py  test_atlas_index.py  test_contact_fit.py  test_contact_peak_fit.py  test_contacts.py  test_curry_export.py  test_electrode_models.py  test_exporters.py  test_lazy_init.py  test_load_rosa_volume.py  test_qc.py  test_registration.py  test_ros_parser.py  test_transforms.py
tests/rosa_scene/: __init__.py  test_atlas_assignment_policy.py
tests/shank_core/: _utils.py  test_blob_pipeline.py  test_detect_pipeline.py  test_io.py  test_masking.py
tests/shank_engine/: test_blob_segment_consensus_analysis.py  test_contracts.py  test_orchestrator.py  test_pipelines.py  test_registry.py  test_schema_snapshot.py
tools/: analyze_blob_persistence.py  analyze_blob_segment_consensus.py  analyze_hybrid_primitives.py  analyze_proposal_coverage.py  analyze_shank_support.py  benchmark_de_novo_hypothesis_select.py  build_seeg_shank_ground_truth.py  debug_guided_fit_shank.py  diagnose_ros_file.py  eval_candidate_ranker.py  eval_seeg_localization.py  export_rosa_helper_import_bundle.py  phase8_sanity.py  refine_shank_ground_truth_guided.py  rosa_export.py  shank_detect.py  shank_testset.py
(+42 files in other folders)
